# mandalorian-project

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  LICENSE  PROJECT_REPORT.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  TODO-steps.md  TODO.md  index.html  mkdocs.yml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  cloudflare-pages.yml  pages.yml  static.yml
aegis/include/: aegis.h
aegis/src/: monitor.c
beskarcore/: LICENSE  Makefile  README.md  demo.c  demo_beskar_enterprise.c  demo_beskar_link.c  demo_beskar_vault.c  demo_continuous_guardian.c
beskarcore/CAmkES/: system.camkes
beskarcore/CAmkES/components/: boot_rom.camkes  dummy_app.camkes  shield_ledger.camkes
beskarcore/include/: beskar_app_guard.h  beskar_enterprise.h  beskar_link.h  beskar_vault.h  continuous_guardian.h  error_recovery.h  logging.h  monitoring.h  performance.h  verified_boot.h
beskarcore/include/hal/: vault_hal.h  vault_hal_simulation.h
beskarcore/src/: beskar_app_guard.c  beskar_enterprise.c  beskar_link.c  beskar_vault.c  boot_rom.c  continuous_guardian.c  dummy_app.c  error_recovery.c  logging.c  main.c  merkle_ledger.c  monitoring.c  performance.c  verified_boot.c
docs/: fosdem2026_talk_outline.md  full_project_structure.md  index.md  mkdocs.yml
docs/api/: README.md
docs/architecture/: gate.md  helm.md  ledger.md  link.md  overview.md  vault.md
docs/root/: README.md
docs/security/: BLACKBERRY_ENHANCEMENTS.md  BYPASS_RESISTANCE_ROADMAP.md  CRITICAL_SECURITY_FIXES.md  README.md  SECURITY_AUDIT_CRITICAL_FINDINGS.md
docs/troubleshooting/: README.md
hardware/: flash_visionfive2.sh
helm/: README.md  demo_helm.c
helm/include/: helm.h
helm/src/: attestation.c  capability.c  helm.c  monitoring.c
mandalorian/: CMakeLists.txt  stubs.c  stubs.h
mandalorian/agent/: openclaw-adapter.c
mandalorian/capabilities/: issuer.c  schema.h
mandalorian/core/: gate.c  gate.h  policy.c  receipt.c  verifier.c
mandalorian/docs/: architecture.md  threat-model.md
mandalorian/examples/: constrained-agent-demo.c
mandalorian/runtime/: executor.c
mandate/: PRODUCT_BRIEF.md
memory/: 2026-03-24.md
scripts/: deploy.sh  maintain.sh  security-audit.sh  setup-dependencies.sh
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/architecture/gate/: index.html
site/architecture/helm/: index.html
site/architecture/ledger/: index.html
site/architecture/link/: index.html
site/architecture/overview/: index.html
site/architecture/vault/: index.html
site/fosdem2026_talk_outline/: index.html
site/full_project_structure/: index.html
site/root/: index.html
site/root/CONTRIBUTING/: index.html
site/root/PRE_UPLOAD_CHECKLIST/: index.html
site/root/TODO/: index.html
site/search/: search_index.json
site/security/: index.html
site/security/BLACKBERRY_ENHANCEMENTS/: index.html
site/security/BYPASS_RESISTANCE_ROADMAP/: index.html
site/security/CRITICAL_SECURITY_FIXES/: index.html
site/security/SECURITY_AUDIT_CRITICAL_FINDINGS/: index.html
site/troubleshooting/: index.html
tests/: CMakeLists.txt  Makefile  standalone_test.c
tests/comprehensive/: simple_test.c  test_mandalorian_gate.c  test_suite.c
tests/fuzz/: fuzz_vault.c
tests/integration/: test_system.c
tests/performance/: test_performance.c
tests/unit/: test_crypto.c  test_ledger.c  test_performance.c  test_runtime.c  test_security.c
toolchains/: x86_64.cmake
veridianos/: README.md  demo.c  simple_demo.c
veridianos/include/: u_runtime.h
veridianos/openswiftui/: SPEC.md
veridianos/src/: android_runtime.c  app_sandbox.c  u_runtime.c
veridianos/tools/: veridian-rebuild-ios
veridianos/waydroid/: HARDENING.md
